--- a/pom.xml
+++ b/pom.xml
@@ -123,5 +123,11 @@
             <artifactId>flink-streaming-scala_2.11</artifactId>
             <version>1.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
